[package]
name = "prust-lib"
description = "Persistent & Immutable Data Structures in Rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/victorcolombo"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
thread_safe = []

